   Aggregating such patterns in a rule-based AS is thus the technique of
   choice for modeling large peer-to-peer/volunteer computing/cloud platforms.
 * New model for Vivaldi routing. We transformed the Vivaldi network model
   into a Vivaldi routing model (based on the rule-based model). This allows to
   combine Vivaldi based latencies with last-mile platforms.

 Simix
 * Introduce a new context factory "raw", highly inspirated from the
   ucontext factory, but using manually crafted functions in assembly to
   do the work in an efficient manner.
 * Allow to change the used context factory at run time, not only at
   compilation time. Use --cfg=contexts/factory:raw for maximal speed.
 * Add an option --cfg=contexts/stacksize:N to set the stack size of the user
   contextes at runtime (only with raw contexts or ucontexts).
 * Completely rewrote this module to allow parallel execution of user
   processes. Use --cfg=contexts/nthreads:N to execute user processes
   with N parallel threads (the default is 1, meaning no parallelism).
 * Allow to decide dynamically between sequential and parallel modes.
   When nthreads > 1, you can use --cfg=contexts/threshold:P to run the user
   processes in parallel only when their number is greater than or equal to P.

 XBT
 * New command line option: if you pass --cfg=verbose-exit:0, SimGrid
   won't output the state of processes when interrupted with Ctrl-C
 * Add a new function xbt_dynar_to_array that transforms a dynar into a
   NULL-terminated array. This may solve backward compatibility issues
   due to the change to return type of SD_Simulate. See also:
   http://lists.gforge.inria.fr/pipermail/simgrid-user/2010-December/002206.html
 * Add new macros with variable number of arguments.
   - in xbt/log.h: XBT_DEBUG, XBT_VERB, XBT_INFO, etc.
   - in xbt/asserts.h: xbt_assert
   - in xbt/cunit.h: xbt_test_{add,fail,assert,log}
   - in xbt/ex.h: THROWF and RETHROWF.